--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment 8</title>
+    <title>Slug Sync</title>
   </head>
   <body>
     <div id="root"></div>
